tests/cases/compiler-development/artifact/errors/diagnostic-ownership-aggregate-enum-payload.diagnostic
diagnostic error code=O0001 family=ownership message="ownership-carrying aggregate enum payloads are not supported yet; use a direct own i64/u64 payload or store the owner outside the enum payload, got Slot[Token]" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-aggregate-enum-payload.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-aggregate-enum-payload.ari" bytes=232
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-aggregate-enum-payload.ari" line=18 column=13 end_line=18 end_column=17 byte_start=182 byte_end=186 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-ownership-aggregate-enum-payload.ari:18:13\n    |\n 18 |   TokenSlot(Slot[Token]),\n    |             ^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-ownership-aggregate-enum-payload.ari" line=9 column=12 end_line=9 end_column=15 byte_start=104 byte_end=107 message="field 'value.payload' carries owner type own i64"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-ownership-aggregate-enum-payload.ari:9:12\n   |\n 9 |   payload: own i64,\n   |            ^^^"
  Note index=0 location=none message="aggregate enum payload layout can drop only direct owner words today; nested owner-bearing aggregates would need per-field active-payload drop state"
  Help index=0 location=none message="move the owning value into a direct enum payload, keep the owner in a surrounding struct, or drop it before constructing the enum"
